--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 </head>
 <body>
+  <!-- Header section start form here  -->
 <header>
     <div class="navbar bg-base-100 shadow-sm">
   <div class="navbar-start">
@@ -86,6 +87,11 @@
     </div>
 
  </section>
+ <!-- Second banner Start form here  -->
+  <section>
+      <h2 class="mb-8 font-bold text-4xl text-center"><span class="text-sky-600">Let's </span>Learn Vocabularies</h2>
+
+  </section>
 
 
 
