add my first api file

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </div>
 </header>
 
-<!-- Banner part strt form here  -->
+<!-- Banner part start form here  -->
  <section class=" flex items-center justify-between py-5 w-11/12 mx-auto flex-col-reverse md:flex-row ">
     <!-- left side  -->
     <div class="flex-1 text-center md:text-left">
@@ -76,7 +76,7 @@
 
 </p>
 <input type="text" placeholder="Enter your name " class="input mb-3" /><br>
-<input type="text" placeholder="Type here" class="input  mb-3" /><br>
+<input type="text" placeholder="Type Your password" class="input  mb-3" /><br>
 
 <button class="btn btn-primary">Get Started</button>
     </div>
@@ -90,8 +90,16 @@
  <!-- Second banner Start form here  -->
   <section>
       <h2 class="mb-8 font-bold text-4xl text-center"><span class="text-sky-600">Let's </span>Learn Vocabularies</h2>
+      <div id="level-container" class="flex justify-center flex-wrap gap-5 ">
+
+      </div>
 
   </section>
+  <!-- Word Container start form here  -->
+   <section id="word-container" class="bg-gray-200 p-10 my-10 w-11/12 mx-auto">
+
+
+   </section>
 
 
 
@@ -110,6 +118,6 @@
 
 
     
-    <script src="index.js"></script>
+    <script src="script/index.js"></script>
 </body>
 </html>
