add my second file

--- a/index.html
+++ b/index.html
@@ -96,14 +96,17 @@
 
   </section>
   <!-- Word Container start form here  -->
-   <section id="word-container" class="bg-gray-200 p-10 my-10 w-11/12 mx-auto">
+   <section id="word-container" class="bg-gray-200 p-10 my-10 w-11/12 mx-auto grid grid-cols-3 gap-5 rounded-3xl">
+   
+<div class="text-center col-span-full space-y-5 font-bangla">
 
+  <p class="">আপনি এখনো কোন Lesson Select করেন নি </p>
+  <h1 class="text-3xl font-bold">একটি Lesson Select করুন। </h1>
+
+</div>
 
    </section>
-
-
-
-
+   <!-- Modal part  -->
 
 
 
